--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,10 +1,10 @@
 /* src/HelpButton.css */
 .help-button {
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   right: 20px;
   padding: 10px 20px;
-  background-color: #333;
+  background-color: white;
   color: white;
   cursor: pointer;
   z-index: 1000; /* Ensure the button is above other content */
@@ -29,11 +29,11 @@
   */
 
 
-.help-menu{
+/* .help-menu{
   margin:0; 
-}
+} */
 
-/* .help-menu ul {
+.help-menu ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -50,8 +50,24 @@
 
 .help-menu a:hover {
   text-decoration: underline;
-} */
+}
 
 .filler{
   margin: 0;
 }
+
+.help-menu{
+  visibility: hidden;
+  margin: 0;
+  position: fixed;
+  bottom: 60px;
+  right: 20px;
+  width: 80px; 
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 0px;
+  z-index: 1050;/* Ensure the menu is above other content but below the button */
+  border-radius: 10px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+}
+
